<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="50sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="130dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/welcome"
                android:layout_marginStart="20dp"
                android:layout_marginTop="250dp"
                />
        </FrameLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="10"
            android:hint="@string/login_name"
            app:helperText="@string/help_text_login"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_marginTop="20dp"
            android:inputType="textPersonName"
            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            app:errorEnabled="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:startIconDrawable="@drawable/name"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:hint="@string/password_name"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle"
            app:helperText="@string/help_text_pass"
            app:errorEnabled="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:startIconDrawable="@drawable/password"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/password"
                android:inputType="numberPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_login"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/btn_remember"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/btn_remember"
            android:textSize="20sp"
            />



    </LinearLayout>

</RelativeLayout>