<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOwnerActivity"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="657dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/owner_of_the_animal"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputFName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLength="20"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/patronymic"
                android:inputType="text"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/btn_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_period_from"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/period_from"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:id="@+id/text_date_from"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btn_period_to"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/period_to"
                android:layout_weight="1"
                android:layout_marginEnd="20dp" />
            <TextView
                android:id="@+id/text_date_to"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:prefixText="@string/prefix_phone"
            android:layout_marginTop="30dp"
            app:counterEnabled="true"
            app:counterMaxLength="10">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPhone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="text|number"
                android:maxLength="10"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_add_pet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_next_animal"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            />



    </LinearLayout>

</RelativeLayout>