<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddPetActivity"
    android:background="@color/bg">



    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="657dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animal_info"
            android:layout_marginBottom="20sp"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="150dp">
                <ImageView
                    android:id="@+id/image_pet"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_input_add"
                    android:layout_gravity="center" />
            </FrameLayout>

            <Button
                android:id="@+id/btn_download_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/download_photo"
                android:textSize="15sp"
                />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPetName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pet_name"
                android:inputType="text"
                android:maxLength="30"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pet_sex"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/black"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                >

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_girl"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pet_boy"
                    android:textSize="20sp"
                    android:layout_margin="10dp"/>

            </RadioGroup>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="90"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPetDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/pet_description"
                android:inputType="text"
                android:maxLength="100"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btn_save_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_data"
            android:textSize="20sp"/>
    </LinearLayout>

</RelativeLayout>